<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/helpLayout"
        android:layout_width="250dp"
        android:layout_height="320dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12">

        <ImageView
            android:id="@+id/helpImgView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@drawable/bookstore1" />

        <GridView
            android:id="@+id/helpGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="4"
            android:padding="2dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpLayout">

        <TextView
            android:id="@+id/helpTxtViewLoca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="map"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/helpTxtView"
            android:textColor="@color/Douglas"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/helpTxtViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/helpTxtViewPhone"
            android:textColorLink="@color/Douglas"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/helpTxtViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/helpTxtViewEmail"
            android:textColorLink="@color/Douglas"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/helpTxtViewWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:clickable="true"
            android:text="@string/helpTxtViewWeb"
            android:textColorLink="@color/Douglas"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/helpTxtViewHour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/helpTxtViewHour"
            android:textSize="18sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>